# playerctl_wrapper_rs

./: Cargo.toml  README.md
examples/: basic_usage.rs
src/: dbus_utils.rs  introspectable.rs  lib.rs  media_player.rs  metadata.rs  peer.rs  player.rs  playerctl.rs  playerctld.rs  playlists.rs  properties.rs  tracklist.rs  utils.rs
tests/: introspect_tests.rs  introspectable_tests.rs  media_player_tests.rs  metadata_tests.rs  peer_tests.rs  player_tests.rs  playerctl_tests.rs  playlists_tests.rs  properties_tests.rs  tracklist_tests.rs
