[package]
name = "playerctl_wrapper_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dbus = { version = "0.9.7", features = ["futures"] }
dbus-tokio = "0.7.6"
futures-util = "0.3.30"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
